# miracledraft_map_helper

./: .gitignore  AI_DISCLOSURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  RUST_PORT_README.md  SECURITY.md  SOURCE_CODE_GUIDE.md  SVG_INTERCHANGE_NOTES.md  TEST_REPORT.md  WONDERDRAFT_GUI_README.md  build.rs  d_wonderdraft.py  install-linux-launcher.sh  miracledraft-map-helper.desktop  start_miracledraft_map_helper.bat  start_miracledraft_map_helper.sh  start_wonderdraft_editor.bat  start_wonderdraft_editor.sh  start_wonderdraft_editor_rust.sh  wd_record_decoder.py  wonderdraft-map-extractor.desktop  wonderdraft_extract.py  wonderdraft_font_names.txt  wonderdraft_gui.config  wonderdraft_gui.py  wonderdraft_gui_memory.py  wonderdraft_gui_symbol_geometry.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app_assets/icons/: license.txt
src/: assets.rs  error.rs  fastlz.rs  fonts.rs  gcpf.rs  godot_text.rs  images.rs  inkarnate.rs  lib.rs  main.rs  pck.rs  settings.rs  svg.rs  svg_render.rs  value.rs  variant.rs
tempfiles/: linestyles_examples
testfiles/: fullmap_attempt2_render_settings.csv  fullmap_attempt_render_settings.csv  layermap_map_data.txt  layermap_render_settings.csv
wiki/: Editing-SVG-for-Import.md  Functions-and-Keyboard-Shortcuts.md  Getting-Started.md  Home.md  Inkarnate-and-CSV-Import.md  Map-Data-Text-Syntax.md  SVG-Round-Trip.md  Settings-and-Troubleshooting.md  _Sidebar.md  translation settings.md  wonderdraft_map fileformat.md
