[package]
name = "wonderdraft-editor"
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
description = "Native Rust editor for Wonderdraft map files with SVG interchange"
license = "Unlicense"
repository = "https://github.com/Glumbosch/wonderdraft_map_extractor"
homepage = "https://github.com/Glumbosch/wonderdraft_map_extractor"
readme = "README.md"
keywords = ["wonderdraft", "map-editor", "svg"]
categories = ["graphics", "parser-implementations"]

[dependencies]
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "x11"] }
flate2 = "1.1.9"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
png = "0.18.1"
quick-xml = "0.39.4"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = "2.5.8"

[profile.release]
lto = "thin"
strip = true
